--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "nytimesbestseller",
   "version": "0.0.1",
   "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "exp start",
     "test": "jest"
   },
   "dependencies": {
     "babel-plugin-transform-decorators": "^6.24.1",
+    "expo": "25.0.0",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-state-tree": "^1.3.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-parallax-scroll-view": "^0.20.1",
-    "react-navigation": "^1.0.0-beta.27",
+    "react-navigation": "1.2.0",
     "styled-components": "^3.0.2"
   },
   "devDependencies": {
